swim_common/src/form/tests/derive/invalid_tag_placement_enum.stderr
error: Tags are only supported on enumeration variants.
  --> $DIR/invalid_tag_placement_enum.rs:19:12
   |
19 |     #[form(tag = "Enumeration")]
   |            ^^^^^^^^^^^^^^^^^^^
